overflow fix

--- a/css/_base.scss
+++ b/css/_base.scss
@@ -28,13 +28,13 @@ html {
   width: 100vw;
   font-size: 16px;
   height: 100%;
+  overflow-x: hidden;
 }
 
 body {
   // background-image: linear-gradient(90deg, #9f9184, #998b7e, #938578, #8d7f72, #87796c);
   background-image: linear-gradient(90deg, #d1e3ff, #c9dcfa, #c1d5f4, #b9ceef, #b1c7ea);
   background-color: #fff;
-  min-height: 100%;
   width: 100vw;
   overflow-x: hidden;
 }
