--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,5 +1,5 @@
 header {
-  position: absolute;
+  position: relative;
   width: 100%;
   z-index: 10;
 
